--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.profiles.active=test
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://localhost:3307/api_contas?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 server.port = 8081
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql= true
+
+security.oauth2.client.scope=password
+security.jwt.signing-key=dGVzdGU=
+
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= guest
+spring.rabbitmq.password= guest
+
+queue.name=ms.email
