--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.profiles.active=test
-spring.datasource.url=jdbc:mysql://localhost:3307/api_contas?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://192.168.18.19:3307/api_contas?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-server.port = 8081
+server.port = 8082
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
