--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.profiles.active=test
-spring.datasource.url=jdbc:mysql://192.168.18.19:3307/api_contas?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/api_contas?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
-server.port = 8082
+server.port = 8081
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.flyway.locations=classpath:db/migrations,classpath:db/testdata
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql= true
 
