--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.rabbitmq.username= guest
 spring.rabbitmq.password= guest
 
 queue.name=ms.email
+owner.ref=4Ever Service app
+email.from=api-control-gamer@gmail.com.br
